--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -8,16 +9,127 @@
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
-
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
 </head>
 
-  <body>
+<body>
 
-    <!-- Copy and paste your HTML from the first UI project here -->
-      
-    
+
+  <body>
+    <header class="navbar">
+      <nav class="nav-links">
+        <a href="#/Services" class="nav-link">Services</a>
+        <a href="#/Product" class="nav-link">Product</a>
+        <a href="#/Vision" class="nav-link">Vision</a>
+        <a href="#/Features" class="nav-link">Features</a>
+        <a href="#/About" class="nav-link">About</a>
+        <a href="#/Contact" class="nav-link">Contact</a>
+        <a href="/"> </a class="nav-link">
+      </nav>
+      <a href="/" class="logo"><img src="img/logo.png" alt="Great Idea! Company logo." /></a>
+    </header>
+
+    <section class="container">
+      <div class="flex lines">
+        <div class="half verticle center-text">
+          <h1 class="big-text">
+            INNOVATION
+            <br>
+            ON
+            <br>
+            DEMAND
+          </h1>
+          <button>
+            Get Started
+          </button>
+        </div>
+        <div class="half center-text">
+          <img src="img/header-img.png" class="verticle circle-img" />
+        </div>
+    </section>
+
+    <main class="container bordered">
+      <section class="flex space-between">
+        <div class="half">
+          <h4>Features</h4>
+          <p>
+            Aliquam elementum magna eros, ac posuere elvit tempus et.
+            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+            ornare nisl. Nullam convallis augue justo, at imperdiet metus
+            scelerisque quis.
+          </p>
+        </div>
+        <div class="half">
+          <h4>About</h4>
+          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
+            vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+            convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+      </section>
+
+      <section>
+        <div class="flex">
+          <img class="img-fluid" src="img/mid-page-accent.jpg" />
+        </div>
+      </section>
+
+      <section>
+        <div class="flex">
+          <div class="third services">
+            <h4>Services</h4>
+
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+
+          <div class="third product">
+            <h4>Product</h4>
+
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+
+          <div class="third vision">
+            <h4>Vision</h4>
+
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <section class="container">
+
+      <h4>CONTACT</h4>
+
+      <address class="address">
+        <p class="street">123 Way 456 Street
+          <br>
+          Somewhere, USA
+        </p>
+        <p>1 (888) 888-8888</p>
+        <a mailto="sales@greatidea.io">sales@greatidea.io</a>
+      </address>
+
+    </section>
+
+    <footer class="container center-text">
+      <p class="copyright">&copy; Great Idea 2019.</p>
+    </footer>
+
+
   </body>
+
 </html>
