--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -17,7 +17,7 @@
   <body>
     <header class="navbar">
       <nav class="nav-links">
-        <a href="#/Services" class="nav-link">Services</a>
+        <a href="./Services.html" class="nav-link">Services</a>
         <a href="#/Product" class="nav-link">Product</a>
         <a href="#/Vision" class="nav-link">Vision</a>
         <a href="#/Features" class="nav-link">Features</a>
@@ -49,7 +49,7 @@
 
     <main class="container bordered">
       <section class="flex space-between">
-        <div class="half">
+        <div class="half wrapper">
           <h4>Features</h4>
           <p>
             Aliquam elementum magna eros, ac posuere elvit tempus et.
@@ -58,7 +58,7 @@
             scelerisque quis.
           </p>
         </div>
-        <div class="half">
+        <div class="half wrapper">
           <h4>About</h4>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
             vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
@@ -74,7 +74,7 @@
 
       <section>
         <div class="flex">
-          <div class="third services">
+          <div class="third wrapper">
             <h4>Services</h4>
 
             <p>
@@ -85,7 +85,7 @@
             </p>
           </div>
 
-          <div class="third product">
+          <div class="third wrapper">
             <h4>Product</h4>
 
             <p>
@@ -96,9 +96,8 @@
             </p>
           </div>
 
-          <div class="third vision">
+          <div class="third wrapper">
             <h4>Vision</h4>
-
             <p>
               Aliquam elementum magna eros, ac posuere elvit tempus et.
               Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
