--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -1,107 +1,182 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-  <title>Great Idea!</title>
+    <title>Great Idea!</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/index.css" />
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-<body>
+  <body>
+    <header class="navbar">
+      <nav class="nav-links">
+        <a href="#/Services" class="nav-link">Services</a>
+        <a href="#/Product" class="nav-link">Product</a>
+        <a href="#/Vision" class="nav-link">Vision</a>
+        <a href="#/Features" class="nav-link">Features</a>
+        <a href="#/About" class="nav-link">About</a>
+        <a href="#/Contact" class="nav-link">Contact</a>
+      </nav>
+      <!-- <a href="/" class="logo"> -->
+      <a href="/" class="logo"
+        ><img src="img/logo.png" alt="Great Idea! Company logo."
+      /></a>
+    </header>
+<main>
+
+      <section>
+        <div class="container">
+          <img class="img-fluid" src="img/services-header.jpg" />
+        </div>
+      </section>
+
+      <section class="container">
+        <h1>Services</h1>
+        <p>
+          Our services provide the best digital value in nulla suscipit interdum
+          diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet,
+          iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur
+          cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
+          pellentesque eleifend. Mauris euismod facilisis iaculis.
+        </p>
+      </section>
+
+      <section class="container bordered">
+        <div class="cards">
+          <div class="card">
+            <h4>Digital Design</h4>
+
+            <p>
+              Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+              accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+              justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+              finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+              euismod facilisis iaculis.
+            </p>
+
+            <button class="card-btn">Learn More</button class="card-btn">
+          </div>
+
+          <div class="card">
+            <h4>UX / UI</h4>
+
+            <p>
+              Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+              accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+              justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+              finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+              euismod facilisis iaculis.
+            </p>
+
+            <button class="card-btn">Learn More</button>
+          </div>
+
+          <div class="card">
+            <h4>Digital Marketing</h4>
+
+            <p>
+              Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+              accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+              justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+              finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+              euismod facilisis iaculis.
+            </p>
+
+            <button class="card-btn">Learn More</button>
+          </div>
+
+          <div class="card">
+            <h4>Web Development</h4>
+
+            <p>
+              Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+              accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+              justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+              finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+              euismod facilisis iaculis.
+            </p>
+
+            <button class="card-btn">Learn More</button>
+          </div>
+
+          <div class="card">
+            <h4>iOS Development</h4>
+
+            <p>
+              Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+              accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+              justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+              finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+              euismod facilisis iaculis.
+            </p>
+
+            <button class="card-btn">Learn More</button>
+          </div>
+
+          <div class="card">
+            <h4>Android Development</h4>
+
+            <p>
+              Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+              accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+              justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+              finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+              euismod facilisis iaculis.
+            </p>
+
+            <button class="card-btn">Learn More</button>
+          </div>
+
+        </div>
+      </section>
 
 
-Services
-Product
-Vision
-Features
-About
-Contact
-
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
 
 
-<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+  <section class="container">
+    <div class="flex">
+      <div class="half wrapper">
+          <h4>Some Facts About Our Services</h4>
 
-Services
+          <p class="m-bottom info">
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+        <ul class="list">
+          <li><span>Awesome thing</span></li>
+          <li><span>Amazing thing</span></li>
+          <li><span>Cool thing</span></li>
+          <li><span>Great thing</span></li>
+        </ul>
+      </div>
 
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+          <div class="half verticle">
+            <div class="img-fluid">
+              <img
+                src="img/services-info.png"
+                alt="one of our employees hard at work"
+              />
+            </div>
+          </div>
+    </div>
+  </section>
+</main>
 
-
-Digital Design
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-UX / UI
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Digital Marketing
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Web Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-iOS Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Android Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-Some Facts About Our Services
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
-
-<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
-Copyright Great Idea! 2018
-
-</body>
-
+    <footer class="center-text">
+      <p class="copyright">&copy; Great Idea 2019.</p>
+    </footer>
+  </body>
 </html>
