--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -36,8 +36,7 @@
       <a href="/" class="logo"><img src="img/logo.png" alt="Great Idea! Company logo." /></a>
     </header>
 
-    <section class="container">
-      <div class="flex lines">
+    <section>
         <div class="half verticle center-text">
           <h1 class="big-text">
             INNOVATION
@@ -50,85 +49,81 @@
             Get Started
           </button>
         </div>
-        <div class="half center-text">
           <img src="img/header-img.png" class="verticle circle-img" />
-        </div>
     </section>
 
-    <main class="container bordered">
-      <section class="flex space-between">
-        <div class="half wrapper">
-          <h4>Features</h4>
-          <p>
-            Aliquam elementum magna eros, ac posuere elvit tempus et.
-            Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-            ornare nisl. Nullam convallis augue justo, at imperdiet metus
-            scelerisque quis.
+      <main class="bordered">
+        <section class="space-between">
+          <div class="half">
+            <h4>Features</h4>
+            <p>
+              Aliquam elementum magna eros, ac posuere elvit tempus et.
+              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+              ornare nisl. Nullam convallis augue justo, at imperdiet metus
+              scelerisque quis.
+            </p>
+          </div>
+          <div class="half">
+            <h4>About</h4>
+            <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
+              vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
+              convallis augue justo, at imperdiet metus scelerisque quis.</p>
+          </div>
+        </section>
+
+        <section>
+            <img class="img-fluid" src="img/mid-page-accent.jpg" />
+        </section>
+
+        <section class="space-between">
+            <div class="third">
+              <h4>Services</h4>
+
+              <p>
+                Aliquam elementum magna eros, ac posuere elvit tempus et.
+                Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+                ornare nisl. Nullam convallis augue justo, at imperdiet metus
+                scelerisque quis.
+              </p>
+            </div>
+
+            <div class="third">
+              <h4>Product</h4>
+
+              <p>
+                Aliquam elementum magna eros, ac posuere elvit tempus et.
+                Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+                ornare nisl. Nullam convallis augue justo, at imperdiet metus
+                scelerisque quis.
+              </p>
+            </div>
+
+            <div class="third">
+              <h4>Vision</h4>
+              <p>
+                Aliquam elementum magna eros, ac posuere elvit tempus et.
+                Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
+                ornare nisl. Nullam convallis augue justo, at imperdiet metus
+                scelerisque quis.
+              </p>
+            </div>
+        </section>
+      </main>
+
+    <section>
+<div class="full">
+
+        <h4>CONTACT</h4>
+
+        <address class="address">
+          <p class="street">123 Way 456 Street
+            <br>
+            Somewhere, USA
           </p>
-        </div>
-        <div class="half wrapper">
-          <h4>About</h4>
-          <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse
-            vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam
-            convallis augue justo, at imperdiet metus scelerisque quis.</p>
-        </div>
-      </section>
-
-      <section>
-        <div class="flex">
-          <img class="img-fluid" src="img/mid-page-accent.jpg" />
-        </div>
-      </section>
-
-      <section>
-        <div class="flex">
-          <div class="third wrapper">
-            <h4>Services</h4>
-
-            <p>
-              Aliquam elementum magna eros, ac posuere elvit tempus et.
-              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-              ornare nisl. Nullam convallis augue justo, at imperdiet metus
-              scelerisque quis.
-            </p>
-          </div>
-
-          <div class="third wrapper">
-            <h4>Product</h4>
-
-            <p>
-              Aliquam elementum magna eros, ac posuere elvit tempus et.
-              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-              ornare nisl. Nullam convallis augue justo, at imperdiet metus
-              scelerisque quis.
-            </p>
-          </div>
-
-          <div class="third wrapper">
-            <h4>Vision</h4>
-            <p>
-              Aliquam elementum magna eros, ac posuere elvit tempus et.
-              Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu
-              ornare nisl. Nullam convallis augue justo, at imperdiet metus
-              scelerisque quis.
-            </p>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <section class="container">
-
-      <h4>CONTACT</h4>
-
-      <address class="address">
-        <p class="street">123 Way 456 Street
-          <br>
-          Somewhere, USA
-        </p>
-        <p>1 (888) 888-8888</p>
-        <a mailto="sales@greatidea.io">sales@greatidea.io</a>
-      </address>
+          <p>1 (888) 888-8888</p>
+          <a mailto="sales@greatidea.io">sales@greatidea.io</a>
+        </address>
+</div>
 
     </section>
 
