--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -6,10 +6,6 @@
 
     <title>Great Idea!</title>
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
-      rel="stylesheet"
-    />
     <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
@@ -41,13 +37,12 @@
 <main>
 
       <section>
-        <div class="container">
           <img class="img-fluid" src="img/services-header.jpg" />
-        </div>
       </section>
 
-      <section class="container">
-        <h1>Services</h1>
+      <section>
+      <div class="full">
+          <h1>Services</h1>
         <p>
           Our services provide the best digital value in nulla suscipit interdum
           diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet,
@@ -55,6 +50,7 @@
           cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
           pellentesque eleifend. Mauris euismod facilisis iaculis.
         </p>
+      </div>
       </section>
 
       <section class="container bordered">
@@ -150,7 +146,6 @@
 
 
   <section class="container">
-    <div class="flex">
       <div class="half wrapper">
           <h4>Some Facts About Our Services</h4>
 
@@ -170,14 +165,12 @@
       </div>
 
           <div class="half verticle">
-            <div class="img-fluid">
               <img
+                class="img-fluid"
                 src="img/services-info.png"
                 alt="one of our employees hard at work"
               />
-            </div>
           </div>
-    </div>
   </section>
 </main>
 
